# techdice

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
bot/: BUILD.bazel  bot.go  bot_test.go  main.go
dice/: BUILD.bazel  dice.go  dice_test.go  main.go  parser.go  parser_test.go
