package(
    default_visibility = ["//visibility:public"],
)

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test", "go_binary")

go_library(
    name = "bot",
    srcs = ["bot.go"],
    importpath = "github.com/katre/techdice/bot",
    deps = [
        "//dice",
        "//dice:parser",
        "@discordgo//:go_default_library",
        "@dgrouter//exrouter:go_default_library",
    ],
)

go_test(
    name = "bot_test",
    srcs = ["bot_test.go"],
    embed = [":bot"],
    deps = [
        "//dice",
        "@testify//assert:go_default_library",
        "@testify//require:go_default_library",
    ],
)

go_binary(
    name = "techdice",
    srcs = ["main.go"],
    deps = [
        ":bot",
    ],
)
