package(
    default_visibility = ["//visibility:public"],
)

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test", "go_binary")

go_library(
    name = "bot",
    srcs = ["bot.go"],
    importpath = "github.com/katre/techdice/bot",
    deps = [
        "//dice",
        "//dice:parser",
        "@com_github_bwmarrin_discordgo//:go_default_library",
        "@com_github_necroforger_dgrouter//exrouter:go_default_library",
    ],
)

go_test(
    name = "bot_test",
    srcs = ["bot_test.go"],
    embed = [":bot"],
    deps = [
        "//dice",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

go_binary(
    name = "techdice",
    srcs = ["main.go"],
    deps = [
        ":bot",
    ],
)
