package(
    default_visibility = ["//visibility:public"],
)

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dice",
    srcs = ["dice.go"],
    importpath = "github.com/katre/techdice/dice",
    deps = [],
)

go_test(
    name = "dice_test",
    srcs = ["dice_test.go"],
    embed = [":dice"],
    deps = [
        "@testify//assert:go_default_library",
        "@testify//require:go_default_library",
    ],
)

go_library(
    name = "parser",
    srcs = ["parser.go"],
    importpath = "github.com/katre/techdice/parser",
    deps = [
        ":dice",
    ],
)

go_test(
    name = "parser_test",
    srcs = ["parser_test.go"],
    embed = [":parser"],
    deps = [
        "@testify//assert:go_default_library",
        "@testify//require:go_default_library",
    ],
)
